test/tests/stages/18_structures/invalid_types/extra_credit/other_features/prefix_decr_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[29]:
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(my_struct)
  =
  {
  const int(1)
  }
  ;
  --
  identifier(my_struct)
  ;
  return
  const int(0)
  ;
  }
